<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".PopUpFragment">

        <!-- TODO: Update blank fragment layout -->

        <Button
            android:id="@+id/btn_selectFile"
            android:layout_width="130dp"
            android:layout_height="52dp"
            android:layout_marginStart="56dp"
            android:text="@string/selectFile"
            app:layout_constraintBottom_toBottomOf="@+id/ShowInfo"
            app:layout_constraintStart_toEndOf="@+id/ShowInfo" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="130dp"
            android:layout_height="52dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="88dp"
            android:text="@string/Submit"
            app:layout_constraintEnd_toEndOf="@+id/btn_selectFile"
            app:layout_constraintTop_toBottomOf="@+id/ShowInfo" />

        <TextView
            android:id="@+id/ShowInfo"
            android:layout_width="134dp"
            android:layout_height="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/SubmitYourResume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
