<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserSettings">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Username"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="105dp"
        android:layout_height="103dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:layout_editor_absoluteY="4dp" />

    <ImageButton
        android:id="@+id/choose_profile_pic"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="choose profile picture"
        app:layout_constraintBottom_toTopOf="@+id/s_e_t_t_i_n_g_s"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <Button
        android:id="@+id/all_badges"
        android:layout_width="161dp"
        android:layout_height="62dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/user_allBadges"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/s_e_t_t_i_n_g_s"
        android:layout_width="168dp"
        android:layout_height="62dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="41dp"
        android:text="@string/user_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/profile_settings"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/white"
        android:text="@string/user_pro_settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:icon="@drawable/ic_action_name"
        app:iconTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_e_t_t_i_n_g_s" />

    <Button
        android:id="@+id/h_e_l_p"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/white"
        android:text="@string/user_help"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:icon="@android:drawable/ic_menu_help"
        app:iconTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_settings" />

    <Button
        android:id="@+id/f_e_e_d_b_a_c_k"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/white"
        android:text="@string/user_feedback"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:icon="@android:drawable/ic_menu_edit"
        app:iconTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h_e_l_p" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="330dp"
        android:layout_height="51dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/white"
        android:text="@string/user_logOut"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:icon="@android:drawable/ic_menu_set_as"
        app:iconTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_e_e_d_b_a_c_k" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>